hphp/test/slow/builtin/builtin_extension_DOMNodeList.php.expectf
DOMNodeList

Fatal error: A null object pointer was used. in %s/builtin_extensions.inc on line 6